# materials

godfather/: 00_io.c  00_io.cpp  01_ptr_arithmetic.c  02_strings.c  02_strings.cpp  03_stringops.c  04_args.c  05_exploit.c  06_c_alloc.cpp  06_cpp_alloc.cpp  07_memmanip.c  08_codestyle_quiz_1.cpp  08_codestyle_quiz_2.cpp  08_codestyle_quiz_3.cpp  08_codestyle_quiz_4.cpp  08_codestyle_quiz_5.cpp
inherit/: 00-inheritance-on-anilmals.cpp  01-circle-ellipse-problem.cpp  02-public-private-protected.cpp  03-inheritance-memory-model.cpp  04-ebo.cpp  05-friend-inheritance.cpp  06-multiple-inheritance.cpp  07-virtual-inheritance.cpp  08-downcast-from-virtual.cpp  09-name-lookup-virtual-inheritance.cpp
iteratorimpl/: 01_naive_iterator.cpp  02_iterator_traits.cpp  03_distance.cpp  04_distance_constexpr.cpp  05_not_naive_iterator.cpp  06_conditional.cpp  07_const_iterator.cpp  08_reverse_iterator.cpp  CMakeLists.txt
oop/: 00_references.cpp  01_accept_ref.cpp  02_return_ref.cpp  03_trickle_const.cpp  04_go_back_to_93.cpp  05_imagine_non_const_life_extension.cpp  06_vector_of_refs.cpp  07_private_public_overload.cpp  08_struct_size.cpp  09_inner_struct_leaks.cpp  10_reference_fields.cpp  11_reference_fields.cpp  12_rule_of_three.cpp  13_rule_of_three_cas.cpp  14_string_subscription.cpp
template/: 01_basic_functions.cpp  02_conflicting_types.cpp  03_no_deduction.cpp  04_template.cpp  04_typename.cpp  06_primes.cpp  08_type_traits.cpp  09_is_homogeneous.cpp  10_crtp.cpp  10_template_parent.cpp  11_object_counter.cpp  12_no_chaining.cpp  13_polymorhic_chaining.cpp
(+10 files in other folders)
